webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-service
spec:
  #  三个副本
  replicas: 2
  selector:
    matchLabels:
      app: webook
  template:
    metadata:
      labels:
        #        这个 webook-record 一定要和前面的 selector 的 matchLabels 匹配上
        app: webook
    #        这个是 Deployment 管理的 Pod 的模板
    spec:
      #      Pod 里面运行的所有的 container
      containers:
        - name: webook
          image: xiaoxina/webook:v0.0.1
          ports:
            - containerPort: 8081
