webook-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-postgres
  labels:
    app: webook-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-postgres
  template:
    metadata:
      name: webook-postgres
      labels:
        app: webook-postgres
    spec:
      containers:
        - name: webook-postgres
          image: postgres:15.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres
              name: postgres-storage
      restartPolicy: Always
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
#            PVC persistent volume claim
            claimName: webook-postgres-pvc
