webook-postgresl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-postgres
spec:
  selector:
    app: webook-postgres
  ports:
    - protocol: TCP
      port: 15432
      targetPort: 5432
  type: LoadBalancer
